--- a/Calendário/Agendamento.html
+++ b/Calendário/Agendamento.html
@@ -131,9 +131,10 @@
                                                                 <label><strong>Corte Masculino</strong></label>  
                                                                 <select name="cor" class="form-control">
                                                                     <option>[--Nenhum Serviço--]</option>
-                                                                    <option name="cor">Branco(a)</option>
-                                                                    <option name="cor">Negro(a)</option>
-                                                                    <option name="cor">Pardo(a)</option>
+                                                                    <option name="cor">Serviço(1)</option>
+                                                                    <option name="cor">Serviço(2)</option>
+                                                                    <option name="cor">Serviço(3)</option>
+                                                                    <option name="cor">Serviço(4)</option>
                                                                 </select>
                                                             </div>
                                                         </div>
@@ -143,8 +144,10 @@
                                                                 <label><strong>Barba Masculino</strong></label>  
                                                                 <select name="Perfil" class="form-control">
                                                                     <option>[--Nenhum Serviço--]</option>
-                                                                    <option name="Perfil">Cliente</option>
-                                                                    <option name="Perfil">Funcionário</option>
+                                                                    <option name="cor">Serviço(1)</option>
+                                                                    <option name="cor">Serviço(2)</option>
+                                                                    <option name="cor">Serviço(3)</option>
+                                                                    <option name="cor">Serviço(4)</option>
                                                                 </select>
                                                             </div>
                                                         </div>
@@ -154,8 +157,10 @@
                                                                 <label><strong>Cabelo Feminino</strong></label>  
                                                                 <select name="Perfil" class="form-control">
                                                                     <option>[--Nenhum Serviço--]</option>
-                                                                    <option name="Perfil">Cliente</option>
-                                                                    <option name="Perfil">Funcionário</option>
+                                                                    <option name="cor">Serviço(1)</option>
+                                                                    <option name="cor">Serviço(2)</option>
+                                                                    <option name="cor">Serviço(3)</option>
+                                                                    <option name="cor">Serviço(4)</option>
                                                                 </select>
                                                             </div>
                                                         </div>
@@ -165,8 +170,10 @@
                                                                 <label><strong>Manicure Feminino</strong></label>  
                                                                 <select name="Perfil" class="form-control">
                                                                     <option>[--Nenhum Serviço--]</option>
-                                                                    <option name="Perfil">Cliente</option>
-                                                                    <option name="Perfil">Funcionário</option>
+                                                                    <option name="cor">Serviço(1)</option>
+                                                                    <option name="cor">Serviço(2)</option>
+                                                                    <option name="cor">Serviço(3)</option>
+                                                                    <option name="cor">Serviço(4)</option>
                                                                 </select>
                                                             </div>
                                                         </div>              
