Update Style Modal Resposivo :microbe:

--- a/Calendário/Agendamento.html
+++ b/Calendário/Agendamento.html
@@ -218,15 +218,18 @@
                                                 <div class="col-md-6 p-4">
                                                     <div class="campoForm2">
                                                         <label for="nome">Nome/Usuário: </label><br>
-                                                        <input type="text" id="nome" name="nome" value="testeNome" disabled><br>
+                                                        <input type="text" id="nome" name="nome" value="testeNome"
+                                                            disabled><br>
                                                     </div>
                                                     <div class="campoForm2">
                                                         <label for="telefone">Telefone: </label><br>
-                                                        <input type="text" id="telefone" name="telefone" value="testTelefone" disabled><br>
+                                                        <input type="text" id="telefone" name="telefone"
+                                                            value="testTelefone" disabled><br>
                                                     </div>
                                                     <div class="campoForm2">
                                                         <label for="email">E-mail: </label><br>
-                                                        <input type="text" id="email" name="email" value="testeEmail20@gmail.com" disabled><br>
+                                                        <input type="text" id="email" name="email"
+                                                            value="testeEmail20@gmail.com" disabled><br>
                                                     </div>
                                                 </div>
 
@@ -239,23 +242,22 @@
 
                                                     <div class="campoForm2">
                                                         <Label>Tipo de serviço:</Label><br>
-                                                        <input type="text" name="servico" id="servico" value="Corte Masculino" disabled>
+                                                        <input type="text" name="servico" id="servico"
+                                                            value="Corte Masculino" disabled>
                                                     </div>
 
                                                     <div class="campoForm2">
                                                         <Label>Serviço Escolhido:</Label><br>
-                                                        <input type="text" name="servico" id="servico" value="Serviço(4)" disabled>
+                                                        <input type="text" name="servico" id="servico"
+                                                            value="Serviço(4)" disabled>
                                                     </div>
                                                 </div>
-                                            </div>
-                                            
-                                            <div class="modal-footer">
-                                                <button type="submit" name="excluir" id="enviar" class="btn btn-primary"
-                                                    style="margin-right: 20px;">Enviar</button>
-                                                <button type="reset" class="btn btn-secondary" data-bs-dismiss="modal"
-                                                    style="margin-right: 20px;">Cancelar</button>
-                                                <input type="reset" class="btn btn-dark btInput" name="limpar"
-                                                    value="Limpar">
+                                                <div class="footer" style="background-color: #fff;">
+                                                    <button type="submit" class="btn efeito-btn" name="enviar"
+                                                        id="enviar">Fazer agendamento</button>
+                                                    <button type="reset" class="btn btn-secondary"
+                                                        data-bs-dismiss="modal">Cancelar</button>
+                                                </div>
                                             </div>
                                     </form>
                                 </div>
